--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -24,7 +24,8 @@
                         <h4 class="footer-column">关于我们</h4>
                         <ul class="list-unstyled">
                             <li><%= link_to("公司介绍", Post.find(4) )%></li>
-                            <li style="margin-bottom:46px"><%= link_to("加入我们", Post.find(5) )%></li>
+                            <li><%= link_to("加入我们", Post.find(5) )%></li>
+                            <li><%= link_to("我要提问", contactus_posts_path )%></li>
                         </ul>
                     </div>
                     <div class="col-md-2 col-xs-3">
