--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -25,7 +25,7 @@
                         <ul class="list-unstyled">
                             <li><%= link_to("公司介绍", Post.find(4) )%></li>
                             <li><%= link_to("加入我们", Post.find(5) )%></li>
-                            <li><%= link_to("我要提问", contactus_posts_path )%></li>
+                            <li><%= link_to("我要提问", messages_path )%></li>
                         </ul>
                     </div>
                     <div class="col-md-2 col-xs-3">
