--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
+        <!-- logo 商标 -->
         <div class="navbar-header">
             <a class="navbar-brand logo zsy-brand" href="/" > Convolum
               <span><img src="https://ww1.sinaimg.cn/large/006tNbRwly1fh90hz30clj3036030dfp.jpg" alt="logo" style="top:0px;left:101px;"></span>
@@ -12,7 +12,7 @@
                 <span class="icon-bar"></span>
             </button>
         </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
+        <!-- 链接们 -->
         <div class="navbar-collapse navbar-ex1-collapse collapse" id="myNavbar">
             <ul class="nav navbar-nav">
                 <li class="zsy-li" ><%= link_to("首页", root_path )%></li>
@@ -23,6 +23,7 @@
                 <li class="zsy-li" ><%= link_to("网络知识", netinfo_posts_path )%></li>
                 <li class="zsy-li" ><%= link_to("云管理", yunguanli_path )%></li>
             </ul>
+            <!-- 用户下拉 -->
             <ul class="nav navbar-nav navbar-right zsy-account" >
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" >
