--- a/app/views/admin/intros/_form.html.erb
+++ b/app/views/admin/intros/_form.html.erb
@@ -2,13 +2,13 @@
     <hr style="size:2px" />
     <%= simple_form_for [:admin, @intro] do |f| %>
         <%= f.input :link, :label => "图片链接" %>
-        <!-- 上傳圖片 -->
+        <!-- 如果已经有图片 -->
         <% if @intro.image.present? %>
             <%= image_tag(@intro.image.url, :class => "width-100") %><br>
         <% end %>
+        <!-- 上传图片 -->
         <%= f.label "上传图片" %><br>
         <%= f.file_field :image %><br>
-        <!-- 廣告隱藏與否 -->
         <div class="form-actions">
             <%= f.submit "提交", class: 'btn btn-md btn-primary' %>
         </div>
