--- a/app/views/admin/intros/index.html.erb
+++ b/app/views/admin/intros/index.html.erb
@@ -1,8 +1,11 @@
 <h2 style="text-align:center;" class="space-50"> 广告列表</h2>
+<!-- 新建 -->
 <div class="pull-right" style="padding-bottom: 20px;">
     <%= link_to("新建广告", new_admin_intro_path, class:"btn btn-primary btn-md ")%>
 </div>
+<!-- 广告列表 -->
 <table class="table commonlink">
+    <!-- 表头 -->
     <thead>
         <tr>
             <th>ID</th>
@@ -11,6 +14,7 @@
             <th>选项</th>
         </tr>
     </thead>
+    <!-- 表身 -->
     <tbody>
         <% @intros.each do |intro| %>
             <tr>
