--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,5 +1,7 @@
 <h2 style="text-align:center;" class="space-50">订单列表</h2>
+<!-- 订单列表 -->
 <table class="table ">
+    <!-- 表头 -->
     <thead>
         <tr>
             <th>ID</th>
@@ -8,6 +10,7 @@
             <th>订单状态</th>
         </tr>
     </thead>
+    <!-- 表身 -->
     <tbody>
         <% @orders.each do |order| %>
             <tr>
@@ -19,6 +22,7 @@
         <% end %>
     </tbody>
 </table>
+<!-- 分页 -->
 <%= will_paginate @orders , class: "apple_pagination_white"%>
 <div class="space-50">
 </div>
