--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -1,9 +1,11 @@
 <div class="col-md-8 col-md-offset-2">
     <hr style="size:2px" />
     <%= simple_form_for [:admin, @post] do |f| %>
+        <!-- 文章标题 -->
         <div class="group">
             <%= f.input :title ,:label => "文章标题"%><br>
         </div>
+        <!-- 文章分类 -->
         <div class="group">
             <% Post::CATEGORY.each do |c| %>
                 <label>
@@ -13,6 +15,7 @@
             <% end %>
         </div>
         <br>
+        <!-- 文章子分类 -->
         <div class="group">
             <% Post::SUBCATE.each do |c| %>
                 <label>
@@ -22,15 +25,17 @@
             <% end %>
         </div>
         <br>
-        <br>
+        <!-- 文章正文 -->
         <div class="group">
             <%= f.cktext_area :description, ckeditor: { toolbar: 'mini', language: 'zh-CN'} %>
         </div>
         <br>
+        <!-- 隐藏 -->
         <div class="group">
             <%= f.input :is_hidden ,:label => "勾选为隐藏"%>
         </div>
         <br>
+        <!-- 提交 -->
         <div class="form-actions">
             <%= f.submit "提交", class: 'btn btn-md btn-primary' %>
         </div>
