--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,8 +1,11 @@
 <h2 style="text-align:center;" class="space-50">文章列表</h2>
+<!-- 新增文章 -->
 <div class="pull-right" style="padding-bottom: 20px;">
     <%= link_to("新增文章", new_admin_post_path, class: "btn btn-primary btn-md") %>
 </div>
+<!-- 文章列表 -->
 <table class="table commonlink">
+    <!-- 表头 -->
     <thead>
         <tr>
             <th>ID</th>
@@ -11,6 +14,7 @@
             <th>选项</th>
         </tr>
     </thead>
+    <!-- 表身 -->
     <tbody>
         <% @posts.each do |post| %>
             <tr>
@@ -41,6 +45,7 @@
         <% end %>
     </tbody>
 </table>
+<!-- 分页 -->
 <%= will_paginate @posts, class: "apple_pagination_white" %>
 <div class="space-30">
 </div>
