--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,8 +1,11 @@
 <h2 style="text-align:center;" class="space-50">产品列表</h2>
+<!-- 新增产品 -->
 <div class="pull-right" style="padding-bottom: 20px;">
     <%= link_to("新增产品", new_admin_product_path, class:"btn btn-primary btn-md")%>
 </div>
+<!-- 产品列表 -->
 <table class="table commonlink">
+    <!-- 表头 -->
     <thead>
         <tr>
             <th>ID</th>
@@ -12,6 +15,7 @@
             <th width="300">选项</th>
         </tr>
     </thead>
+    <!-- 表身 -->
     <tbody>
         <% @products.each do |product| %>
             <tr>
@@ -52,6 +56,7 @@
         <% end %>
     </tbody>
 </table>
+<!-- 分页 -->
 <%= will_paginate @products , class: "apple_pagination_white"%>
 <div class="space-50">
 </div>
