--- a/app/views/admin/videos/_form.html.erb
+++ b/app/views/admin/videos/_form.html.erb
@@ -1,11 +1,14 @@
 <div class="col-md-8 col-md-offset-2">
     <hr style="size:2px" />
     <%= simple_form_for [:admin, @video] do |f| %>
+        <!-- 标题 -->
         <%= f.input :name, :label => "视频标题" %><br>
+        <!-- 上传视频 -->
         <% if @video.content.present? %>
             <%= video_tag @video.content_url.to_s ,:controls =>true %><br>
         <% end %>
         <%=f.file_field :content%><br>
+        <!-- 提交 -->
         <div class="form-actions">
             <%= f.submit "提交", class: 'btn btn-md btn-primary' %><br>
         </div>
