--- a/app/views/carts/checkout.html.erb
+++ b/app/views/carts/checkout.html.erb
@@ -1,12 +1,11 @@
 <div class='container'>
     <div class='row content-box'>
         <div class='col-md-12'>
-            <!--=== 頁面標題 ===-->
+            <!--页面标题-->
             <h3 class="center"><i class='fa fa-shopping-cart'></i> 购物清单</h3>
             <hr />
-            <!--=== 購物車資訊 ===-->
+            <!--购物车信息-->
             <div class='row'>
-                <!-- 購物車列表內容 -->
                 <div class='col-xs-12 col-md-12 cart-item-box'>
                     <% current_cart.cart_items.each do |cart_item| %>
                         <div class="row commonlink" style="padding-left: 20px;padding-bottom:15px;">
@@ -27,31 +26,31 @@
                 </div>
             </div>
             <br/>
-            <!-- 購物車內商品總價 -->
+            <!-- 购物车内商品总价 -->
             <div class='clearfix'>
                 <div class='pull-right'>合计： <%= render_cart_total_price(current_cart) %></div>
             </div>
             <hr/>
-            <!--=== 訂單資訊 ===-->
+            <!-- 订单信息 -->
             <div class='col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1'>
                 <h3 class="center"><i class='fa fa-credit-card'></i> 订单信息</h3>
-                <!--=== 下訂表單 ===-->
+                <!-- 订单输入表单-->
                 <div class='order-form'>
                     <%= simple_form_for @order do |f| %>
                         <div class='form-group'>
-                            <!-- 訂購人 -->
+                            <!-- 付款人 -->
                             <legend>付款信息</legend>
                             <%= f.input :billing_name, placeholder: "姓名", :label => "付款人-姓名" %>
                             <%= f.input :billing_phone, placeholder: "电话",  :label => "付款人-电话" %>
                             <hr>
-                            <!-- 收貨人 -->
+                            <!-- 收货人 -->
                             <legend>寄送信息</legend>
                             <%= f.input :shipping_name, placeholder: "姓名",  :label => "收件人-姓名" %>
                             <%= f.input :shipping_phone, placeholder: "电话",  :label => "收件人-电话" %>
                             <%= f.input :shipping_address, placeholder: "地址",  :label => "收件人-地址" %>
                             <hr>
                         </div>
-                        <!-- 下訂，產生訂單 -->
+                        <!-- 确认 -->
                         <div class='form-actions center'>
                             <%= f.submit "确认订单", class: 'btn btn-md btn-primary' %>
                         </div>
