--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,6 +1,8 @@
 <div class="row content-box">
     <div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
+        <!-- 标题 -->
         <h3 class="center space-50"><i class='fa fa-shopping-cart'></i> 购物车</h3>
+        <!-- 一键清空 -->
         <span class='pull-right commonlink'><%= link_to("一键清空购物车", clean_carts_path,method: :delete,data: {confirm: "你确定要清空整个购物车吗？"})%>
         </span>
         <br>
@@ -9,7 +11,7 @@
             <% if current_cart.cart_items.length > 0 %>
                 <div class='col-xs-12  col-md-8 cart-item-box'>
                     <% current_cart.cart_items.each do |cart_item| %>
-                        <!-- 商品圖片 -->
+                        <!-- 商品图片 -->
                         <div class="row commonlink" style="padding-left: 20px;padding-bottom:15px;">
                             <!-- <div class="col-sm-2 ">
                                 <% if cart_item.product.photos.present? %>
@@ -18,11 +20,11 @@
                                     <%= image_tag("http://placehold.it/200x200&text=No Pic") %>
                                 <% end %>
                             </div> -->
-                            <!-- 商品名稱 -->
+                            <!-- 商品名字 -->
                             <div class="name col-xs-5 "><%= link_to(cart_item.product.title, product_path(cart_item.product))%></div>
-                            <!-- 商品單價 -->
+                            <!-- 商品单价 -->
                             <div class="price col-xs-1 ">  <%= cart_item.product.price %></div>
-                            <!-- 商品數量 -->
+                            <!-- 商品数量 -->
                             <div class="quantity-2 col-xs-4 ">
                                 <span>x</span>
                                 <div style="display: inline-block;">
@@ -32,9 +34,9 @@
                                     <% end %>
                                 </div>
                             </div>
-                            <!-- 商品總價（單錢 x 數量） -->
+                            <!-- 商品总价 -->
                             <div class="count col-xs-1 " ><%= render_product_price_count(cart_item.product,cart_item.quantity) %></div>
-                            <!-- 移除單項商品 -->
+                            <!-- 移除单项商品 -->
                             <div class="remove col-xs-1 ">
                                 <%= link_to cart_item_path(cart_item.product_id), method: :delete do %>
                                     <i class="fa fa-remove"></i>
@@ -49,7 +51,7 @@
                     <% end %>
                     <!-- 循环结束 -->
                 </div>
-                <!--=== 顯示購物車小計、結帳按鈕 ===-->
+                <!--小记-->
                 <div class='cart-checkout-box col-xs-12 col-md-4 ' style="padding: 50px;">
                     <div class='clearfix'>
                         <span class='pull-left'>小计</span>
@@ -61,17 +63,17 @@
                     <span class='pull-right'>免运费</span>
                 </div>
                 <hr style="height:1px">
-                <!-- 商品總價 -->
+                <!-- 商品总价 -->
                 <div class='clearfix'>
                     <span class='pull-left'>合计</span>
                     <span class='pull-right'><%= render_cart_total_price(current_cart) %></span>
                 </div>
                 <br/>
-                <!-- 購物須知 -->
+                <!-- 购物须知 -->
                 <div class='clearfix notice'>
                     <p>提醒您：请于订单确认后一小时内完成付款手续。</p>
                 </div>
-                <!-- 前往結帳 -->
+                <!-- 前往结账 -->
                 <div class='clearfix space-20' >
                     <%= link_to("前往结账", checkout_carts_path, method: :post, class: 'btn btn-md btn-primary') %>
                 </div>
