--- a/app/views/common/_post.html.erb
+++ b/app/views/common/_post.html.erb
@@ -1,10 +1,12 @@
 <div class="row space-30">
     <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
         <div class="col-xs-12 show-post">
+            <!-- 文章标题 -->
             <div class="post-title-show">
                 <%= @post.title %>
             </div>
             <hr class="post-hr" >
+            <!-- 文章正文 -->
             <div class="post-description">
                 <%= raw @post.description %>
             </div>
