--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,8 @@
 <div class="row">
     <div class="col-md-10 col-md-offset-1   bg-white space-50">
+        <!-- 左图片 -->
         <div class="preview col-md-6   space-50" >
+            <!-- 大图 -->
             <div class="preview-pic tab-content" >
                 <% if @product.photos.present? %>
                     <div class="tab-pane active" id="pic-1"><%= image_tag(@product.photos[0].image.medium.url) %></div>
@@ -17,6 +19,7 @@
                         <div class="tab-pane" id="pic-5"><%= image_tag(@product.photos[4].image.medium.url) %></div>
                     <% end %>
                 </div>
+                <!-- 5小图 -->
                 <ul class="preview-thumbnail nav nav-tabs">
                     <li class="active"><a data-target="#pic-1" data-toggle="tab"><%= image_tag(@product.photos[0].image.thumb.url) %></a></li>
                     <% if @product.photos[1].present? %>
@@ -37,6 +40,7 @@
             </div>
         </div>
         <div class="product-show-part">
+            <!-- 产品详细信息 -->
             <div class="product-details col-md-6  space-50 ">
                 <h3><%= @product.title %></h3>
                 <h4><%= @product.slogan %></h4>
@@ -82,6 +86,7 @@
             </div>
         </div>
     </div>
+    <!-- 商品详情 -->
     <div class="col-md-10 col-md-offset-1 col-sm-12 col-sm-offset-0 bg-white space-20">
         <h3 class="shangpinxaingqing" >商品详情：</h3>
         <div class="post-description space-30">
