--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,7 @@
 <div class="container-fluid">
+    <!-- 首页大广告 -->
     <div class="row">
-        <div class="welcome_p1">
+        <div class="welcome_p1 ">
             <%= link_to @intro1.link, target: "_blank" do %>
                 <% if @intro1.image.present? %>
                     <%= image_tag(@intro1.image.ad1, :class => "width-100") %>
@@ -11,7 +12,8 @@
         </div>
     </div>
     <div class="row" style="margin-top:6px;">
-        <div class="col-md-4 col-sm-4  col-xs-12" style="padding: 0px 2px;">
+        <!-- 下左小广告 -->
+        <div class="col-md-4 col-sm-4  col-xs-12 box-hover" style="padding: 0px 2px;">
             <%= link_to @intro2.link, target: "_blank" do %>
                 <% if @intro2.image.present? %>
                     <%= image_tag(@intro2.image.ad2, :class => "width-100") %>
@@ -20,7 +22,8 @@
                 <% end %>
             <% end %>
         </div>
-        <div class="col-md-4 col-sm-4  col-xs-12" style="padding: 0px 2px;">
+        <!-- 下中小广告 -->
+        <div class="col-md-4 col-sm-4  col-xs-12 box-hover" style="padding: 0px 2px;">
             <%= link_to @intro3.link, target: "_blank" do %>
                 <% if @intro3.image.present? %>
                     <%= image_tag(@intro3.image.ad2, :class => "width-100") %>
@@ -29,7 +32,8 @@
                 <% end %>
             <% end %>
         </div>
-        <div class="col-md-4 col-sm-4 col-xs-12" style="padding: 0px 2px;">
+        <!-- 下右小广告 -->
+        <div class="col-md-4 col-sm-4 col-xs-12 box-hover" style="padding: 0px 2px;">
             <%= link_to @intro4.link, target: "_blank" do %>
                 <% if @intro4.image.present? %>
                     <%= image_tag(@intro4.image.ad2, :class => "width-100") %>
