--- a/app/views/wirelessinfo/posts/index.html.erb
+++ b/app/views/wirelessinfo/posts/index.html.erb
@@ -2,12 +2,13 @@
     <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12">
         <div class="container-fluid">
             <div class="row">
+                <!-- 路径 -->
                 <div class="pwd space-30">
                     <p class="left-15">首页／无线知识</p>
                 </div>
                 <div class="col-md-8 col-sm-8 sol-xs-12 space-20">
-                    <!-- Trigger the modal with a pic & link -->
-                    <div class="cpad" data-toggle="modal" data-target="#wirelessvideo">
+                    <!-- 左上视频广告 -->
+                    <div class="cpad box-hover" data-toggle="modal" data-target="#wirelessvideo">
                         <% if @intro10.image.present? %>
                             <%= image_tag(@intro10.image.ad3, :class => "width-100") %>
                         <% else %>
@@ -21,7 +22,8 @@
                             <%= video_tag @video.content_url.to_s ,:controls =>true ,:autoplay => false %>
                         </div>
                     </div>
-                    <div class="cpad" style="margin-top:10px;">
+                    <!--左下广告  -->
+                    <div class="cpad box-hover" style="margin-top:10px;">
                         <%= link_to @intro11.link, target: "_blank" do %>
                             <% if @intro11.image.present? %>
                                 <%= image_tag(@intro11.image.ad3, :class => "width-100") %>
@@ -32,7 +34,8 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4 sol-xs-12" style="padding-left:6px;">
-                    <div class="cpad-v space-20">
+                    <!-- 右边广告 -->
+                    <div class="cpad-v space-20 box-hover">
                         <%= link_to @intro12.link, target: "_blank" do %>
                             <% if @intro12.image.present? %>
                                 <%= image_tag(@intro12.image.ad4, :class => "width-100") %>
@@ -49,6 +52,7 @@
 <div class="row  space-30">
     <div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 bg-white wireless-posts-block" >
         <div class="container-fluid">
+            <!-- 无线标题 -->
             <div class="row space-30">
                 <div class="col-md-4 col-sm-4 col-xs-4" style="padding:0px;width:33.2%;">
                     <hr class="header-hr">
@@ -60,13 +64,14 @@
                     <hr class="header-hr">
                 </div>
             </div>
+            <!-- 查看更多 -->
             <div class="row " style="margin-top:5px;">
                 <div class="col-md-12 text-center">
                     <p class="index_more"><%= link_to("查看更多", wirelessinfo_afterindex_path(:subcate => "无线1")  )%></li>
                 </p>
             </div>
         </div>
-        <!-- post -->
+        <!-- 文章 热度 -->
         <div class="row space-30">
             <% @posts.each do |post| %>
                 <div class="col-md-6 text-left">
