--- a/app/views/yunguanli/index.html.erb
+++ b/app/views/yunguanli/index.html.erb
@@ -1,14 +1,17 @@
 <div class="row yunguanli">
-    <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3  col-xs-10 col-xs-offset-1 yunguanli_content">
+    <!-- 登陆框 -->
+    <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3  col-xs-10 col-xs-offset-1 yunguanli_content ">
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <h2><span class="fa fa-sign-in"></span> 请登陆</h2>
+                <!-- 用户 + 密码 -->
                 <div class="form-inputs ">
                     <input type="text"  placeholder="用户名" style="width:100%;height:40px;">
                 </div>
                 <div class="form-inputs ">
                     <input type="text"  placeholder="密码" style="width:100%;height:40px;">
                 </div>
+                <!-- 确认按钮 -->
                 <div class="form-actions button">
                     <input type="submit" value="登陆" style="
                     background-color: #2196F3;
