--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -26,12 +26,17 @@
                             <div class="price col-xs-1 ">  <%= cart_item.product.price %></div>
                             <!-- 商品数量 -->
                             <div class="quantity-2 col-xs-4 ">
-                                <span>x</span>
-                                <div style="display: inline-block;">
+                                <span style="padding-right:5px;">x </span>
+                                <!-- <div style="display: inline-block;">
                                     <%= form_for cart_item, url: cart_item_path(cart_item.product_id) do |f| %>
                                         <%= f.select :quantity, 1..cart_item.product.quantity %>
                                         <%= f.submit "更新"%>
                                     <% end %>
+                                </div> -->
+                                <div class="count-input" style="display: inline-block;">
+                                    <%= link_to("-", remove_quantity_cart_item_path(cart_item.product_id), method: :post) %>
+                                    <input  type="text" value="<%= cart_item.quantity %>">
+                                    <%= link_to("+", add_quantity_cart_item_path(cart_item.product_id), method: :post) %>
                                 </div>
                             </div>
                             <!-- 商品总价 -->
