--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -21,7 +21,7 @@
                 <!-- <li class="zsy-li" ><%= link_to("商城", products_path )%></li> -->
                 <li class="zsy-li" ><%= link_to("无线知识", wirelessinfo_posts_path )%></li>
                 <li class="zsy-li" ><%= link_to("网络知识", netinfo_posts_path )%></li>
-                <li class="zsy-li" ><%= link_to("云管理", yunguanli_path )%></li>
+                <li class="zsy-li" ><%= link_to("Cloud", yunguanli_path )%></li>
             </ul>
             <!-- 用户下拉 -->
             <ul class="nav navbar-nav navbar-right zsy-account" >
