search page done

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -849,3 +849,12 @@ div.box-hover {
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.22);
     }
 }
+
+
+//search page
+.search-info-title {
+  margin: 70px 30px 400px 30px;
+}
+.search-info-title-2 {
+  margin: 50px 30px 30px 30px;
+}
