--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'true' %>
         <%= javascript_include_tag 'application', 'data-turbolinks-track': 'true' %>
-        <link rel="shortcut icon" href="/favicon.ico">
+        <link rel="shortcut icon" href="https://ww1.sinaimg.cn/large/006tKfTcly1fiyebybm0rj301c01c745.jpg">
     </head>
     <body style="background-color: #fff;">
         <div class="container-fluid" >
