--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
         <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-        <link rel="shortcut icon" href="https://ww1.sinaimg.cn/large/006tKfTcly1fiyebybm0rj301c01c745.jpg">
+        <link rel="shortcut icon" href="https://ooo.0o0.ooo/2017/08/27/59a28ecf6598e.png">
     </head>
     <body>
         <div class="container-fluid" >
